# Canopy-WMDE

./: CMakeLists.txt  README.md  install.sh
CanopyDE/: CMakeLists.txt
CanopyDE/assets/xsessions/: canopy.desktop
CanopyDE/include/: desktop.h  menu.h  panel.h  settings.h  systray.h  taskbar.h  wm_interface.h
CanopyDE/include/widgets/: battery.h  clock.h  menu_button.h  network.h  volume.h
CanopyDE/src/: desktop.c  main.c  menu.c  panel.c  settings.c  systray.c  taskbar.c  wm_interface.c
CanopyDE/src/widgets/: battery.c  clock.c  menu_button.c  network.c  volume.c
CanopyWM/: CMakeLists.txt  readme.md
CanopyWM/include/: audio.h  canopywm.h  client.h  config.h  desktop_window.h  display_manager.h  ini.h  input.h  log.h  notifications.h  wm.h  wm_interface.h
CanopyWM/src/: audio.c  client.c  config.c  desktop_window.c  display_manager.c  events.c  ini.c  input.c  main.c  notifications.c  wm.c  wm_interface.c
